Upcoming:
- Fixed recipe for the grindstone manual
- Fixed a crash when breaking a tank in creative mode
- Fixed a few grindstone recipes (wheat->flour and sugarcane->sugar)

0.5.0:
- Fixes for latest McJtyLib

0.4.0:
- Made compatible with the latest McJtyLib (3.0.0)
- Fixed a bug with The One Probe and WAILA integration where all information was shown twice

0.4.0alpha:
- Made compatible with the latest McJtyLib (3.0.0)
- Fixed a bug with The One Probe and WAILA integration where all information was shown twice