@@ -9,7 +9,7 @@ minecraft_version=1.12.2
 mcp_mappings=snapshot_20180504
 forge_version=14.23.3.2678
 
-jei_version=1.12.2:4.8.5.159
+jei_version=1.12.2:4.13.1.222
 waila_version=1.8.23-B38_1.12
 top_version=1.12:1.12-1.4.20-12
 mcjtylib_version=1.12-3.1.0
