@@ -2,6 +2,7 @@ Upcoming:
 - Fixed recipe for the grindstone manual
 - Fixed a crash when breaking a tank in creative mode
 - Fixed a few grindstone recipes (wheat->flour and sugarcane->sugar)
+- Added JEI recipe integration for the cooker, grindstone and cutting board
 
 0.5.0:
 - Fixes for latest McJtyLib
